UI/UX improvements: Added daily totals table and streamlined meal tables
- Added daily totals table at the top of the page
- Removed meal category wrappers and integrated meal names into table headers
- Fixed item addition functionality in modal
- Updated styling for better visual hierarchy
- Improved error handling and logging

--- a/diet-tracker/index.html
+++ b/diet-tracker/index.html
@@ -20,6 +20,22 @@
                 <button id="resetButton" class="reset-btn" title="Reset all data">Reset</button>
             </div>
         </div>
+        <div class="items-container daily-totals">
+            <table class="items-table">
+                <thead>
+                    <tr>
+                        <th class="item-name">Daily Total</th>
+                        <th>Calories</th>
+                        <th>Protein</th>
+                        <th>Carbs</th>
+                        <th>Fat</th>
+                    </tr>
+                </thead>
+                <tbody id="dailyTotalsBody">
+                    <!-- Daily totals will be populated by JavaScript -->
+                </tbody>
+            </table>
+        </div>
         <div id="dietItems">
             <!-- Items will be populated by JavaScript -->
         </div>
