Fixed form validation and field requirements
- Removed required attributes from HTML to handle dynamically in JS
- Improved form validation with better error messages
- Added checks for NaN values
- Separated validation for existing and new items

--- a/diet-tracker/index.html
+++ b/diet-tracker/index.html
@@ -83,8 +83,8 @@
                         <div class="form-group">
                             <label for="newAmount">Amount</label>
                             <div class="input-with-unit">
-                                <input type="number" id="newAmount" min="0" step="1" required>
-                                <select id="newUnit" required>
+                                <input type="number" id="newAmount" min="0" step="1">
+                                <select id="newUnit">
                                     <option value="gram">gram</option>
                                     <option value="piece">piece</option>
                                     <option value="scoop">scoop</option>
