--- a/diet-tracker/index.html
+++ b/diet-tracker/index.html
@@ -91,21 +91,32 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="protein">Protein (g)</label>
-                            <input type="number" id="protein" min="0" step="0.1">
+                        <div class="form-group macro-inputs">
+                            <div class="macro-field">
+                                <label for="protein">Protein</label>
+                                <div class="input-with-unit">
+                                    <input type="number" id="protein" min="0" step="0.1">
+                                    <span>g</span>
+                                </div>
+                            </div>
+                            <div class="macro-field">
+                                <label for="carbs">Carbs</label>
+                                <div class="input-with-unit">
+                                    <input type="number" id="carbs" min="0" step="0.1">
+                                    <span>g</span>
+                                </div>
+                            </div>
+                            <div class="macro-field">
+                                <label for="fat">Fat</label>
+                                <div class="input-with-unit">
+                                    <input type="number" id="fat" min="0" step="0.1">
+                                    <span>g</span>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="carbs">Carbs (g)</label>
-                            <input type="number" id="carbs" min="0" step="0.1">
-                        </div>
-                        <div class="form-group">
-                            <label for="fat">Fat (g)</label>
-                            <input type="number" id="fat" min="0" step="0.1">
-                        </div>
-                        <div class="form-group">
-                            <label for="calories">Calories</label>
-                            <input type="number" id="calories" readonly>
+                        <div class="form-group calories-display">
+                            <label>Calories</label>
+                            <div class="calculated-value" id="calories">0</div>
                         </div>
                         <div id="saveToMasterList" class="form-group checkbox-group">
                             <label>
