UI and data model improvements
- Added milk entries for each meal with correct amounts
- Simplified product names by removing brand names
- Changed add button to use text instead of + symbol
- Improved button and table styling
- Adjusted column widths and padding for better readability

--- a/diet-tracker/index.html
+++ b/diet-tracker/index.html
@@ -16,7 +16,7 @@
         <div class="app-header">
             <h1>Daily Diet Tracker</h1>
             <div class="header-buttons">
-                <button id="addButton" class="add-btn" title="Add item">+</button>
+                <button id="addButton" class="add-btn" title="Add item">Add</button>
                 <button id="resetButton" class="reset-btn" title="Reset all data">Reset</button>
             </div>
         </div>
