--- a/diet-tracker/index.html
+++ b/diet-tracker/index.html
@@ -20,7 +20,7 @@
                 <line x1="4" y1="18" x2="20" y2="18"></line>
             </svg>
         </button>
-        <h1 class="nav-title">Diet</h1>
+        <h1 class="nav-title">Diet Tracker</h1>
     </div>
     <div class="nav-menu" id="navMenu">
         <div class="nav-menu-header">
@@ -28,19 +28,12 @@
             <button class="close-menu-button" id="closeMenuButton" aria-label="Close menu">&times;</button>
         </div>
         <div class="nav-items">
-            <a href="#" class="nav-item active" data-page="diet">Diet</a>
-            <a href="#" class="nav-item" data-page="tasks">Tasks</a>
+            <a href="#" class="nav-item active" data-page="diet">Diet Tracker</a>
+            <a href="#" class="nav-item" data-page="tasks">Tasks Tracker</a>
         </div>
     </div>
     <div class="nav-overlay" id="navOverlay"></div>
     <div class="page" id="dietPage">
-        <div class="app-header">
-            <h1>Daily Diet Tracker</h1>
-            <div class="header-buttons">
-                <button id="addButton" class="add-btn" title="Add item">Add</button>
-                <button id="resetButton" class="reset-btn" title="Reset all data">Reset</button>
-            </div>
-        </div>
         <div class="items-container daily-totals">
             <table class="items-table">
                 <thead>
@@ -59,6 +52,12 @@
         </div>
         <div id="dietItems">
             <!-- Items will be populated by JavaScript -->
+        </div>
+        <div class="app-header">
+            <div class="header-buttons">
+                <button id="addButton" class="add-btn" title="Add item">Add</button>
+                <button id="resetButton" class="reset-btn" title="Reset all data">Reset</button>
+            </div>
         </div>
     </div>
 
