--- a/diet-tracker/index.html
+++ b/diet-tracker/index.html
@@ -9,6 +9,9 @@
     <link rel="apple-touch-icon" href="icon-180.png">
     <link rel="apple-touch-startup-image" href="splash.png">
     <title>Daily Diet Tracker</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
